--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'><circle cx='16' cy='16' r='16' fill='%238B5CF6'/><rect x='8' y='8' width='16' height='20' rx='2' fill='white' opacity='0.9'/><rect x='10' y='10' width='12' height='2' fill='%238B5CF6'/><rect x='10' y='13' width='10' height='1' fill='%238B5CF6'/><rect x='10' y='15' width='11' height='1' fill='%238B5CF6'/><rect x='10' y='17' width='9' height='1' fill='%238B5CF6'/><rect x='10' y='19' width='12' height='1' fill='%238B5CF6'/></svg>" type="image/svg+xml" />
+    <link rel="shortcut icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'><circle cx='16' cy='16' r='16' fill='%238B5CF6'/><rect x='8' y='8' width='16' height='20' rx='2' fill='white' opacity='0.9'/><rect x='10' y='10' width='12' height='2' fill='%238B5CF6'/><rect x='10' y='13' width='10' height='1' fill='%238B5CF6'/><rect x='10' y='15' width='11' height='1' fill='%238B5CF6'/><rect x='10' y='17' width='9' height='1' fill='%238B5CF6'/><rect x='10' y='19' width='12' height='1' fill='%238B5CF6'/></svg>" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#4F46E5" />
+    <meta name="theme-color" content="#8B5CF6" />
     <meta name="description" content="Modern Library Management System - Manage your personal book collection with ease" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Modern Library - Manage Your Books</title>
   </head>
   <body>
